examples/tests/compile_fail/non_struct_field_access_fail.zl
fun main() >> i32 {
    i32 value = 7;
    value.x = 1;
    return 0;
}
